<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/titlebar_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_vip"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/zte_vip" />

    </RelativeLayout>

    <include layout="@layout/bottom_buttons" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@drawable/common_bg"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/guide_welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/guide_welcome_title"
            android:textSize="16sp"
            android:textColor="#333333"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/guide_margin_left"
                android:layout_marginRight="@dimen/guide_margin_left"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vip_title_1"
                        android:textColor="@color/guide_vip_label_color"
                        android:textSize="@dimen/guide_vip_txt_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/guide_vip_txt_margin_left"
                        android:text="@string/vip_detail_1"
                        android:textColor="@color/open_lock_txt_color"
                        android:textSize="@dimen/guide_vip_txt_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/guide_vip_txt_margin_top"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vip_title_2"
                        android:textColor="@color/guide_vip_label_color"
                        android:textSize="@dimen/guide_vip_txt_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/guide_vip_txt_margin_left"
                        android:text="@string/vip_detail_2"
                        android:textColor="@color/open_lock_txt_color"
                        android:textSize="@dimen/guide_vip_txt_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/guide_vip_txt_margin_top"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vip_title_3"
                        android:textColor="@color/guide_vip_label_color"
                        android:textSize="@dimen/guide_vip_txt_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/guide_vip_txt_margin_left"
                        android:text="@string/vip_detail_3"
                        android:textColor="@color/open_lock_txt_color"
                        android:textSize="@dimen/guide_vip_txt_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/guide_vip_txt_margin_top"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vip_title_4"
                        android:textColor="@color/guide_vip_label_color"
                        android:textSize="@dimen/guide_vip_txt_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/guide_vip_txt_margin_left"
                        android:text="@string/vip_detail_4"
                        android:textColor="@color/open_lock_txt_color"
                        android:textSize="@dimen/guide_vip_txt_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/guide_vip_txt_margin_top"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vip_title_5"
                        android:textColor="@color/guide_vip_label_color"
                        android:textSize="@dimen/guide_vip_txt_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/guide_vip_txt_margin_left"
                        android:text="@string/vip_detail_5"
                        android:textColor="@color/open_lock_txt_color"
                        android:textSize="@dimen/guide_vip_txt_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/guide_vip_txt_margin_top"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vip_title_6"
                        android:textColor="@color/guide_vip_label_color"
                        android:textSize="@dimen/guide_vip_txt_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/guide_vip_txt_margin_left"
                        android:text="@string/vip_detail_6"
                        android:textColor="@color/open_lock_txt_color"
                        android:textSize="@dimen/guide_vip_txt_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <com.zteguidedemo.widget.AutoBgButton
                        android:id="@+id/my_account_login"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@color/sign_in"
                        android:text="@string/zte_sign_in"
                        android:textColor="#ffffff" />

                    <com.zteguidedemo.widget.AutoBgButton
                        android:id="@+id/my_account_register"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@color/sign_up"
                        android:text="@string/zte_sign_up"
                        android:textColor="#ffffff" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <include layout="@layout/bottom_buttons" />

</RelativeLayout>