<?xml version="1.0" encoding="utf-8"?>
<!-- 中兴我的账号视图-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffafafa">
    <RelativeLayout
        android:id="@+id/zte_title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:background="#fff4f4f4">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/zte_account_view_title"
            android:textColor="#ff191919"
            android:textSize="18sp" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_shape2"/>
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/zte_control_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/btn_shape1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/zte_previous_step_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ff333333"
                android:textSize="16sp"
                android:text="@string/previous_step"/>
            <TextView
                android:id="@+id/zte_next_step_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ff333333"
                android:textSize="16sp"
                android:text="@string/next_step"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/zte_title_layout"
        android:layout_above="@+id/zte_control_btn_layout">
        <TextView
            android:id="@+id/zte_register_btn"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="#ff5976b2"
            android:text="@string/zte_sign_up"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/zte_login_btn"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_above="@+id/zte_register_btn"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="#ff5976b2"
            android:text="@string/zte_sign_in"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/zte_login_btn"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:src="@drawable/zte_pic_cloud_contacts"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:textColor="#ff181818"
                android:textSize="16sp"
                android:text="@string/zte_account_view_tips1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:textColor="#ff999999"
                android:textSize="12sp"
                android:text="@string/zte_account_view_tips2"/>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>