<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/Background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog">

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="50dp"
            android:text="@string/user_exp_zte_declare_title_1"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title1"
            android:gravity="center"
            android:text="@string/user_exp_zte_declare_title_2"
            android:textColor="#7fffffff"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/Background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@drawable/common_bg"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_marginBottom="70dp">

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/bottom_text"
                android:textSize="17sp"
                android:text="@string/user_exp_content" />
        </ScrollView>

    </LinearLayout>

    <com.zteguidedemo.widget.AutoBgButton
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_selector"
        android:text="@string/user_exp_back"
        android:textColor="@color/bottom_text" />

</RelativeLayout>