<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="@string/my_phone_be_careful"
            android:textColor="@color/blue"
            android:textSize="19sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="40dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="@string/zte_0840_be_careful_tip"
            android:textColor="@color/bottom_text"
            android:textSize="19sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffe7e7e7"
            >

            <TextView
                android:id="@+id/dialog_cancle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancle"
                android:textSize="19sp"
                android:textColor="@color/bottom_text"
                android:layout_marginRight="10dp"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/btn_general_pressed"/>
            <TextView
                android:id="@+id/dialog_submit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/bottom_text"
                android:textSize="19sp"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>